<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <ListPreference
        android:key="@string/sp_key_sort_order"
        android:title="@string/pref_sort_order_label"
        android:summary="@string/action_most_popular"
        android:entries="@array/sort_order_array_labels"
        android:entryValues="@array/sort_order_array_values"
        android:defaultValue="@string/array_value_most_popular"/>

    <CheckBoxPreference
        android:key="@string/sp_key_show_favorites"
        android:title="@string/pref_show_favorites_label"
        android:summaryOff="@string/pref_show_favorites_summary_off"
        android:summaryOn="@string/pref_show_favorites_summary_on"
        android:defaultValue="@bool/pref_show_favorite_default"/>

</PreferenceScreen>