<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <ImageView
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            android:elevation="5dp"
            android:id="@+id/iv_movie_poster_detail"
            android:layout_height="@dimen/detail_poster_height"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="@dimen/detail_poster_width"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_original_title"
            style="@style/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:scrollHorizontally="false"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/detail_original_movie_title" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail"
            tools:text="@string/detail_plot_synopsis" />


        <TextView
            android:id="@+id/tv_release_date"
            style="@style/DetailReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_original_title"
            app:layout_constraintStart_toStartOf="@+id/tv_original_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
            tools:text="@string/detail_release_date" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:theme="@style/RatingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:isIndicator="true"
            android:contentDescription="@string/cd_average_user_rating"
            android:numStars="10"
            android:rating="5"
            android:stepSize=".25"
            app:layout_constraintEnd_toEndOf="@+id/tv_original_title"
            app:layout_constraintStart_toStartOf="@+id/tv_original_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />


    </android.support.constraint.ConstraintLayout>
</layout>